# AnyWave_Ver_01

./: CMakeLists.txt  Common.h  Makefile  README.md  main.h  partitions.csv  sdkconfig  sdkconfig.ci
components/json_parser/: json_parser.c  message_parser.c  message_parser.h
components/peripheral/: CMakeLists.txt  user_adc.c  user_adc.h  user_i2c.c  user_i2c.h  user_spi.c  user_spi.h
components/task/: CMakeLists.txt  bluetooth.c  bluetooth.h  component.mk  mqtt_task.c  oled_task.c  oled_task.h  ota_task.c  ota_task.h  plan_task.c
components/task/server_certs/: ca_cert.pem
components/user_driver/: CMakeLists.txt
components/user_driver/oled_driver/: oled_display.c  oled_display.h
components/user_driver/stm32_com/: stm32_com.c  stm32_com.h
main/: main.c
